--- a/Assignmnet_1.ipynb
+++ b/Assignmnet_1.ipynb
@@ -212,8 +212,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write a Python Program to print the given string in the format specified in the ​sample output. \n",
-    " # WE, THE PEOPLE OF INDIA, having solemnly resolved to constitute India into a SOVEREIGN, SOCIALIST, SECULAR, DEMOCRATIC REPUBLIC and to secure to all its citizens \n",
+    "# Q3) Write a Python program to reverse a word after accepting the input from the user. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AcadGild \n",
+      "reverse of the world is :-  dliGdacA\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = input(\"\")\n",
+    "print(\"reverse of the world is :- {}\".format(word[::-1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q4) Write a Python Program to print the given string in the format specified in the ​sample output. \n",
+    " ## WE, THE PEOPLE OF INDIA, having solemnly resolved to constitute India into a SOVEREIGN, SOCIALIST, SECULAR, DEMOCRATIC REPUBLIC and to secure to all its citizens \n",
     " "
    ]
   },
